[gd_scene load_steps=14 format=3 uid="uid://iqa3vxt4diav"]

[ext_resource type="Theme" uid="uid://l1m56un8kvw6" path="res://Res/theme.tres" id="1_8vx3p"]
[ext_resource type="Script" path="res://Lib/tool/tool.gd" id="1_27slr"]
[ext_resource type="Texture2D" uid="uid://cwrcs8kcrvdq2" path="res://Res/table.png" id="3_ws257"]
[ext_resource type="Texture2D" uid="uid://c231u3ql1meap" path="res://Res/watermelon.png" id="3_x8ddw"]
[ext_resource type="Texture2D" uid="uid://cau1wfch1jw1o" path="res://Res/watermelon(broken).png" id="4_g5c8g"]
[ext_resource type="PackedScene" uid="uid://btiqipuqeyi4h" path="res://Lib/tool/Mallet.tscn" id="4_uy38c"]
[ext_resource type="Texture2D" uid="uid://bvgpvhvbv0pn8" path="res://Res/Mallet.png" id="5_88wnw"]
[ext_resource type="AudioStream" uid="uid://dkt007vt8cfef" path="res://Lib/tool/Knock1.wav" id="6_lqqk0"]
[ext_resource type="Texture2D" uid="uid://bbnk24w5u7ctu" path="res://Res/book1.jpg" id="7_l2jvx"]
[ext_resource type="Texture2D" uid="uid://bonasrjv2p850" path="res://Res/paper01.jpg" id="8_2s5sl"]

[sub_resource type="Animation" id="Animation_3qtyv"]
resource_name = "Knock"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Watermelon/Collision/Watermelon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.787263, 0.787263), Vector2(0.83, 0.83), Vector2(0.787263, 0.787263)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Watermelon/Collision/Watermelon:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-184, -0.25, 0, 0.25, 0, -201.966, -0.25, 0, 0.25, 0, -184, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.05, 0.1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Watermelon/Collision/Watermelon:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-200, -0.25, 0, 0.25, 0, -205.776, -0.25, 0, 0.25, 0, -200, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.05, 0.1)
}

[sub_resource type="Animation" id="Animation_ot5su"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Watermelon/Collision/Watermelon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.787263, 0.787263)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Watermelon/Collision/Watermelon:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-184, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Watermelon/Collision/Watermelon:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-200, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7xlql"]
_data = {
"Knock": SubResource("Animation_3qtyv"),
"RESET": SubResource("Animation_ot5su")
}

[node name="Tool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_8vx3p")
script = ExtResource("1_27slr")
metadata/_edit_lock_ = true

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(580, 458)
scale = Vector2(2.788, 2.788)
texture = ExtResource("3_ws257")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Back to Menu ->"

[node name="Score" type="Label" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_right = 24.0
offset_bottom = 17.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "瓜德："
horizontal_alignment = 1
vertical_alignment = 1

[node name="Motto" type="Label" parent="."]
layout_mode = 0
offset_left = 514.0
offset_top = 75.0
offset_right = 610.0
offset_bottom = 92.0
text = "听取瓜声一片"

[node name="Watermelon" type="Area2D" parent="."]
position = Vector2(565, 300)
scale = Vector2(0.787263, 0.787263)
input_pickable = false
monitoring = false
metadata/_edit_group_ = true

[node name="Collision" type="CollisionPolygon2D" parent="Watermelon"]
polygon = PackedVector2Array(33.5, -197.8, 33.5, -196.1, 66.5, -188.1, 66.5, -186.4, 104.5, -166.4, 104.5, -164.8, 136.5, -135.8, 136.5, -133.3, 158.5, -104.3, 158.5, -101.7, 177.5, -59.9, 177.5, -55, 184.5, 20.7, 184.5, 25, 182.7, 25, 170.7, 80, 168.9, 80, 142.9, 128, 141.2, 128, 104.2, 166, 101.6, 166, 60.6, 190, 57, 190, 14, 200, -13.9, 200, -51.5, 193.4, -51.5, 191.5, -99.5, 169.6, -99.5, 167.8, -134.5, 137.8, -134.5, 135.2, -167.5, 86.2, -167.5, 82.7, -181.5, 40.6, -181.5, 33, -184.5, -20.4, -184.5, -24, -182.8, -24, -171.8, -78, -169.9, -78, -143.9, -127, -142.2, -127, -103.2, -167, -100.6, -167, -58.6, -191, -54.7, -191, -16.5, -198.3, -16.5, -200, -12.3, -200)

[node name="Watermelon" type="TextureRect" parent="Watermelon/Collision"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -200.0
offset_right = 284.0
offset_bottom = 307.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.787263, 0.787263)
texture = ExtResource("3_x8ddw")
metadata/_edit_lock_ = true

[node name="Broken" type="TextureRect" parent="Watermelon/Collision"]
visible = false
offset_left = -220.0
offset_top = -227.0
offset_right = 211.0
offset_bottom = 213.0
texture = ExtResource("4_g5c8g")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Box" type="Control" parent="Watermelon"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mallet" parent="." instance=ExtResource("4_uy38c")]
visible = false
position = Vector2(961, 464)
rotation = 0.523599

[node name="MalletTex" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 757.0
offset_top = 378.0
offset_right = 1009.0
offset_bottom = 482.0
texture = ExtResource("5_88wnw")

[node name="Tip" type="LinkButton" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 34.0
offset_right = 89.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 30
text = "Tips"

[node name="Box" type="Control" parent="Tip"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Book1" type="Sprite2D" parent="Tip/Box"]
position = Vector2(162, 136)
scale = Vector2(0.389676, 0.389676)
texture = ExtResource("7_l2jvx")

[node name="Label" type="Label" parent="Tip/Box"]
layout_mode = 0
offset_top = 388.0
offset_right = 119.0
offset_bottom = 445.0
text = "点击西瓜敲击，
按钮判定好坏，
左键木槌捡起，
右键木槌放下。"

[node name="Paper01" type="Sprite2D" parent="Tip/Box"]
position = Vector2(162.272, 309.219)
scale = Vector2(0.440376, 0.440376)
texture = ExtResource("8_2s5sl")

[node name="ButtonBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 489.0
offset_right = 700.0
offset_bottom = 548.0
alignment = 1

[node name="Bad" type="Button" parent="ButtonBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "坏！"

[node name="Good" type="Button" parent="ButtonBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "好！"

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_lqqk0")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7xlql")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="body_entered" from="Watermelon" to="." method="_on_watermelon_body_entered"]
[connection signal="gui_input" from="Watermelon/Collision/Watermelon" to="." method="_on_watermelon_gui_input"]
[connection signal="gui_input" from="MalletTex" to="." method="_on_mallet_tex_gui_input"]
[connection signal="mouse_entered" from="Tip" to="." method="_on_tip_mouse_entered"]
[connection signal="mouse_exited" from="Tip" to="." method="_on_tip_mouse_exited"]
[connection signal="pressed" from="ButtonBox/Bad" to="." method="_on_bad_pressed"]
[connection signal="pressed" from="ButtonBox/Good" to="." method="_on_good_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
